[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"


[tool.poetry.scripts]
run = "src/poetry2nix:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
